--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
    },
    "outputs": [],
    "source": [
-    "city_values = greenville\n",
+    "city_values = list(greenville.values())\n",
     "city_values # [68, 'Greenville', 'USA', 84554]"
    ]
   },
