--- a/index.ipynb
+++ b/index.ipynb
@@ -345,7 +345,7 @@
    },
    "outputs": [],
    "source": [
-    "los_cabos_pop = citie\n",
+    "los_cabos_pop = cities[3]['Populat']\n",
     "los_cabos_pop # 287651"
    ]
   },
