automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -502,7 +502,7 @@
     }
    ],
    "source": [
-    "pyeongchang_keys = None\n",
+    "pyeongchang_keys = lest(cities)\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
